# test-aws-ml

./: .env.example  .gitignore  README.md  config.py  download_titanic.py  main.py  mlflow_server.sh  predict.py  predict_lambda.py  pyproject.toml  s3_utils.py  train_and_upload.py  train_titanic.py  train_titanic_lambda.py  upload_to_s3.py
aws-titanic-ml/: .env.example  Dockerfile  README.md  requirements.txt
deploy/: deploy_lambda.sh  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  train_titanic_lambda.py  variables.tf
tests/: test_config.py  test_s3_utils.py
